--- a/style.css
+++ b/style.css
@@ -203,67 +203,5 @@ select {
 
 .hidden {
   visibility: hidden;
-}
-
-@media (max-width: 500px) {
-  .clock-header {
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-  }
-
-  .set-time {
-    flex-direction: column;
-    row-gap: 50px;
-    margin-top: 100px;
-  }
-
-  .timer {
-    width: 450px;
-  }
-
-  .time {
-    width: 400px;
-    margin: 15px 25px;
-  }
-
-  .box {
-    width: 72px;
-    height: 80px;
-  }
-
-  .final-schedule {
-    width: 450px;
-  }
-
-  .dynamic-img-block {
-    align-items: center;
-  }
-
-  .dynamic-img {
-    width: 426px;
-    height: 364px;
-  }
-
-  .set-schedules {
-    width: 456px;
-  }
-
-  .schedule-grid {
-    grid-template-rows: repeat(3, 45px);
-    padding: 20px;
-  }
-
-  .schedule-grid div {
-    grid-template-columns: 1fr 3fr 1fr;
-    column-gap: 5px;
-  }
-
-  select {
-    width: 200px;
-  }
-
-  .mySchedule {
-    padding: 0 5px;
-  }
+  display: none;
 }
