--- a/style.css
+++ b/style.css
@@ -130,9 +130,20 @@ body {
   width: 526px;
   height: 464px;
   margin: 5px;
-  background: white url("./img/lunch_image.svg");
+  background: white url("./img/default.jpg") no-repeat;
   border-radius: 5px;
   background-size: cover;
+}
+
+#img-text {
+  color: black;
+  font-size: 2rem;
+  text-transform: uppercase;
+  position: relative;
+  top: 1rem;
+  left: 2rem;
+  color: #3d087b;
+  font-weight: 600;
 }
 
 .set-schedules {
